--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-domain=test-a0prokat.bpium.ru
-login=egor@dorofeichik.ru
-password=test123
-hook_secret=test_secret
+DOMAIN=test-a0prokat.bpium.ru
+HOOK_SECRET=test_secret
+LOGIN=egor@dorofeichik.ru
+PASSWORD=test123
+PORT_HTTP=8000
